--- a/SpotifyStreamer/app/src/main/res/layout/item_layout.xml
+++ b/SpotifyStreamer/app/src/main/res/layout/item_layout.xml
@@ -25,6 +25,7 @@
             android:layout_height="100dp"
             android:background="#88000000"
             android:layout_gravity="bottom"
+            android:padding="2dp"
             android:orientation="vertical">
 
             <TextView
