Latest changes on Alexandria

--- a/superduo/alexandria/app/src/main/res/layout-land/fragment_add_book.xml
+++ b/superduo/alexandria/app/src/main/res/layout-land/fragment_add_book.xml
@@ -128,4 +128,15 @@
         </LinearLayout>
 
     </RelativeLayout>
+    <RelativeLayout
+        android:id="@+id/progress_bar"
+        android:layout_width="match_parent"
+        android:visibility="gone"
+        android:background="@android:color/white"
+        android:layout_height="match_parent">
+        <ProgressBar
+            android:layout_centerInParent="true"
+            android:layout_width="100dp"
+            android:layout_height="100dp" />
+    </RelativeLayout>
 </FrameLayout>
