--- a/superduo/alexandria/app/src/main/res/layout/activity_main.xml
+++ b/superduo/alexandria/app/src/main/res/layout/activity_main.xml
@@ -17,8 +17,16 @@
     <!-- The drawer is given a fixed width in dp and extends the full height of
          the container. -->
     <fragment android:id="@+id/navigation_drawer"
-        android:layout_width="@dimen/navigation_drawer_width" android:layout_height="match_parent"
-        android:layout_gravity="start" android:name="it.jaschke.alexandria.NavigationDrawerFragment"
-        tools:layout="@layout/fragment_navigation_drawer" />
+    android:layout_width="@dimen/navigation_drawer_width" android:layout_height="match_parent"
+    android:layout_gravity="start" android:name="it.jaschke.alexandria.NavigationDrawerFragment"
+    tools:layout="@layout/fragment_navigation_drawer" />
 
+    <ListView android:id="@+id/left_drawer"
+        android:layout_width="240dp"
+        android:visibility="gone"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:choiceMode="singleChoice"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="0dp"/>
 </android.support.v4.widget.DrawerLayout>
