--- a/superduo/Football_Scores-master/app/src/main/res/layout/detail_fragment.xml
+++ b/superduo/Football_Scores-master/app/src/main/res/layout/detail_fragment.xml
@@ -38,7 +38,9 @@
         android:id="@+id/share_button"
         android:drawableLeft="@android:drawable/ic_menu_share"
         android:paddingLeft="120dp"
-        android:paddingRight="120dp"/>
+            android:paddingStart="120dp"
+        android:paddingRight="120dp"
+            android:paddingEnd="120dp"/>
     </FrameLayout>
 
 </LinearLayout>
