--- a/superduo/Football_Scores-master/app/src/main/res/layout/fragment_about.xml
+++ b/superduo/Football_Scores-master/app/src/main/res/layout/fragment_about.xml
@@ -10,6 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:contentDescription="@string/content_description_app_info"
         android:textSize="12sp"
         />
 
