--- a/superduo/Football_Scores-master/app/src/main/res/layout/fragment_main.xml
+++ b/superduo/Football_Scores-master/app/src/main/res/layout/fragment_main.xml
@@ -14,6 +14,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id = "@+id/scores_list"
+            android:contentDescription="@string/content_description_score_list"
             android:divider="@android:color/transparent"
             android:dividerHeight="15sp"
             />
