--- a/superduo/Football_Scores-master/app/src/main/res/layout/pager_fragment.xml
+++ b/superduo/Football_Scores-master/app/src/main/res/layout/pager_fragment.xml
@@ -6,6 +6,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/pager"
         android:layout_width="match_parent"
+        android:contentDescription="@string/content_description_navigation_item"
         android:layout_height="match_parent">
         <android.support.v4.view.PagerTabStrip
             android:id="@+id/pager_header"
