--- a/Capstone Project/BabyDiary/app/src/main/res/layout/activity_create_event.xml
+++ b/Capstone Project/BabyDiary/app/src/main/res/layout/activity_create_event.xml
@@ -1,5 +1,5 @@
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:id="@+id/fragment"
-    android:name="io.github.pedrofraca.babydiary.CreateEventDialogFragment"
+    android:name="io.github.pedrofraca.babydiary.fragment.CreateEventDialogFragment"
     tools:layout="@layout/fragment_create_event" android:layout_width="match_parent"
     android:layout_height="match_parent" />
