--- a/Capstone Project/BabyDiary/app/src/main/res/layout/activity_main.xml
+++ b/Capstone Project/BabyDiary/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,23 @@
     android:background="@color/colorMainContrast"
     tools:context=".activity.MainActivity">
 
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/MyAppbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:fitsSystemWindows="true">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/MyToolbar"
+            app:theme="@style/ToolBarStyle"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            app:layout_collapseMode="pin" />
+
+    </android.support.design.widget.AppBarLayout>
+
     <RelativeLayout
+        android:layout_marginTop="?attr/actionBarSize"
         android:id="@+id/root_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
