--- a/Capstone Project/BabyDiary/app/src/main/res/layout/activity_map.xml
+++ b/Capstone Project/BabyDiary/app/src/main/res/layout/activity_map.xml
@@ -1,26 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/colorMainContrast"
-    xmlns:android="http://schemas.android.com/apk/res/android" >
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/MyAppbar"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="3"
-        android:id="@+id/map"
-        tools:context=".activity.SelectLocationActivity"
-        android:name="com.google.android.gms.maps.SupportMapFragment" />
-    <Button
-        android:id="@+id/use_location_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:backgroundTint="@color/colorMainContrastDark"
-        android:textColor="@android:color/white"
-        android:text="@string/use_this_location"/>
+        android:layout_height="?attr/actionBarSize"
+        android:fitsSystemWindows="true">
 
-</LinearLayout>
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/MyToolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            app:layout_collapseMode="pin"
+            app:theme="@style/ToolBarStyle" />
+
+    </android.support.design.widget.AppBarLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/colorMainContrast"
+        android:orientation="vertical">
+
+        <fragment
+            android:id="@+id/map"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="3"
+            tools:context=".activity.SelectLocationActivity" />
+
+        <Button
+            android:id="@+id/use_location_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/colorMainContrastDark"
+            android:text="@string/use_this_location"
+            android:textColor="@android:color/white" />
+
+    </LinearLayout>
+
+
+</android.support.design.widget.CoordinatorLayout>
 
 
